[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy_spawner.gd" type="Script" id=1]
[ext_resource path="res://enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://coins.tscn" type="PackedScene" id=3]
[ext_resource path="res://teleport.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/white_tri_50px.png" type="Texture" id=5]
[ext_resource path="res://assets/red_rect_50x10px.png" type="Texture" id=6]
[ext_resource path="res://assets/green_rect_50x10px.png" type="Texture" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = PoolVector2Array( 0, -25, 25, 25, -25, 25 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 30.0

[node name="enemy-spawner" type="KinematicBody2D" groups=[
"kill_proj",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
enemy = ExtResource( 2 )
ROT_SPEED = 7
SPEED = 3
max_hp = 300
coin = ExtResource( 3 )
teleport = ExtResource( 4 )

[node name="tri1" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="tri1" index="0"]

texture = ExtResource( 5 )

[node name="tri2" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="tri2" index="0"]

texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TextureProgress" type="TextureProgress" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = -40.0
margin_right = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 6 )
texture_over = null
texture_progress = ExtResource( 7 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Area2D" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 0, 5 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]


